2018-01-XX Jan Kotanski <jan.kotanski@desy.de>
	* add suport for build-in tango decoders
	* add configuration switch for sardana
	* add scale and translation of axes
	* tagged as 0.13.0

2018-01-22 Jan Kotanski <jan.kotanski@desy.de>
	* add LIMA_VIDEO_IMAGE decoder
	* add Angle/Q space coordinate display
	* tagged as 0.12.0

2018-01-18 Jan Kotanski <jan.kotanski@desy.de>
	* add color channel
	* tagged as 0.11.0

2018-01-17 Jan Kotanski <jan.kotanski@desy.de>
	* remove shape and dtype from datasources stream
	* tagged as 0.10.6

2018-01-16 Jan Kotanski <jan.kotanski@desy.de>
	* add workaround for HWM and topics interference in ZMQ Source (min(HWM) = 2)
	* tagged as 0.10.5

2018-01-16 Jan Kotanski <jan.kotanski@desy.de>
	* fix passing info from Tango File source
	* tagged as 0.10.4

2018-01-12 Jan Kotanski <jan.kotanski@desy.de>
	* remove dtype and shape from metadata
	* tagged as 0.10.3

2018-01-12 Jan Kotanski <jan.kotanski@desy.de>
	* update datasource topic filter message format
	* tagged as 0.10.2

2018-01-12 Jan Kotanski <jan.kotanski@desy.de>
	* add datasource topic filter to zmq source
	* fix a bug in parameter number
	* tagged as 0.10.1

2018-01-11 Jan Kotanski <jan.kotanski@desy.de>
	* add automics datasource list from ZMQ source
	* tagged as 0.10.0

2018-01-11 Jan Kotanski <jan.kotanski@desy.de>
	* add HTTP response source for eiger
	* add Tango File source for pilatus
	* tagged as 0.9.0

2018-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix View 1:1 pixels action for pg < 0.9.9
	* tune ZMQ Stream source
	* tagged as 0.8.4

2018-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* add View 1:1 pixels action
	* allow changing ZMQ Stream source topic during viewing
	* set default HWM for ZMQ Stream source to 1
	* tagged as 0.8.3

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* fix a bug for scaling initialization
	* tagged as 0.8.2

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* repack sources
	* tagged as 0.8.1

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>