@@ -2,6 +2,7 @@
 	* add suport for build-in tango decoders
 	* add configuration switch for sardana
 	* add scale and translation of axes
+	* add labels and units for axes
 	* tagged as 0.13.0
 
 2018-01-22 Jan Kotanski <jan.kotanski@desy.de>
